examples/test/testpolicy9620.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9620
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key0: value3
      key22: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value39
          key17: value9
          key16: value36
      podSelector:
        matchLabels:
          key20: value7
          key5: value47
          key8: value2
